Update: week1C++task1

--- a/week1C++/task1/myproject/task1/task1.vcxproj.filters
+++ b/week1C++/task1/myproject/task1/task1.vcxproj.filters
@@ -7,6 +7,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="itostr.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
 </Project>
