写连接数据库代码

--- a/week3C++/myproject/myproject/myproject.vcxproj
+++ b/week3C++/myproject/myproject/myproject.vcxproj
@@ -157,9 +157,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CSql.h" />
+    <ClInclude Include="DB.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CSql.cpp" />
+    <ClCompile Include="DB.cpp" />
     <ClCompile Include="myproject.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
