--- a/week3C++/myproject/myproject/myproject.vcxproj.filters
+++ b/week3C++/myproject/myproject/myproject.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="DB.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ConnPool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="DB.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ConnPool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
