--- a/week4U3D/Server/Server/Server.vcxproj.filters
+++ b/week4U3D/Server/Server/Server.vcxproj.filters
@@ -30,6 +30,18 @@
     <ClInclude Include="Chat.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MySQL\ConnPool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MySQL\CSql.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MySQL\DB.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Server.cpp">
@@ -42,6 +54,18 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Chat.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MySQL\DB.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MySQL\CSql.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MySQL\ConnPool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
