--- a/week4U3D/Server/Server/Server.vcxproj.filters
+++ b/week4U3D/Server/Server/Server.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClInclude Include="Socket\TCPSocket.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Chat.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="MySQL\ConnPool.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -37,6 +34,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="MySQL\DB.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Room.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -50,9 +50,6 @@
     <ClCompile Include="Socket\TCPSocket.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Chat.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="MySQL\DB.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -60,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MySQL\ConnPool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Room.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
